--- a/home.html
+++ b/home.html
@@ -151,8 +151,9 @@
     </main>
 
     <footer class="Footer">
+      <a href="home2.html">
       <p>RainyDays</p>
-
+    </a>
       <a href="home.html">
         <p>Home</p>
       </a>
