--- a/test.html
+++ b/test.html
@@ -6,30 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="test.css" rel="stylesheet" />
     <link href="hover.css" rel="stylesheet" />
+ 
+
 
     <title>Document</title>
   </head>
   <body>
-    <h1>test</h1>
-    <section class="test">
-      <img src="/images/Bag%202.png" class="testimg hvr-grow" alt="jackets" />
-    </section>
+    <section class="banner">
+    <h2>test</h2>
+  </section>
+
+  <script src="assets/js/browser.min.js"></script>
+
   </body>
 
-  <section class="contact_us_form">
-    <form>
-      <label for="fullname">FULL NAME</label>
-      <input type="text" id="fullname" name="fullname" value="" />
-
-      <label for="lastname">LAST NAME</label>
-      <input type="text" id="lastname" name="lastname" value="" />
-
-      <label for="email">EMAIL</label>
-      <input type="text" id="email" name="email" value="" />
-
-      <label for="message">MESSAGE</label>
-
-      <textarea id="message" name="message" rows="5" cols="20"> </textarea>
-    </form>
+   
   </section>
 </html>
