--- a/test.html
+++ b/test.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="test.css" rel="stylesheet" />
     <link href="hover.css" rel="stylesheet" />
- 
-
 
     <title>Document</title>
   </head>
   <body>
-    <section class="banner">
-    <h2>test</h2>
-  </section>
-
-  <script src="assets/js/browser.min.js"></script>
-
+    <h1>test</h1>
+    <section class="test">
+      <img src="/images/Bag%202.png" class="testimg hvr-grow" alt="jackets" />
+    </section>
   </body>
 
+  <section class="contact_us_form">
    
   </section>
 </html>
