--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
           class="nav-img"
           alt="rectangle for the nav"
         />
-        <a href="about.html">
+        <a href="home2.html">
           <img src="/images/about.png" class="nav-about" alt="about" />
         </a>
         <a href="contact.html">
