--- a/about.html
+++ b/about.html
@@ -20,11 +20,15 @@
 </head>
 <body>
 
-<header>
-    <a href="home.html">
-        <img src="/images/Back%20BTN.png" class="Back-BTN" alt="Back button">
-    </a>
-    <h1>About RainyDays</h1>
+    <header>
+        <a href="home.html">
+          <section>
+            <img
+              src="/images/RainyDays_Logo%201.png"
+              class="logo"
+              alt="Header logo"
+            />
+        </a>
 </header>
 
 <main>
@@ -53,20 +57,14 @@
 </article>
 
 
-<section class="nav">
-    <img src="/images/Nav_rectangle%201.png" class="nav-img" alt="Rectangle for the nav"/>
-    <a href="about.html"> 
-    <img src="/images/about.png" class="nav-about" alt="about"/>
-    </a>
-    <a href="contact.html"> 
-    <img src="/images/User_02.png" class="nav-contact-us" alt="contact"/> 
-    </a>
-    <a href="jackets.html"> 
-    <img src="/images/Bag%202.png" class="nav-jackets" alt="jackets"/> 
-    </a>
-    <img src="/images/Vector.png" class="nav-vector" alt="search"/> 
-</section>
+
 </main>
     
+
+<footer class="footer">
+    <p class="footerRainyDays">&copy; RainyDays<p>
+     <a href="about.html">About Us</a>
+     <a href="contact.html">Contact Us</a>
+</footer>
 </body>
 </html>
