--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
 </script>
 </head>
 <body>
-    <header class="contact">
+    <header>
         <a href="home.html">
-            <img src="/images/Back%20BTN.png" class="Back-BTN" alt="Back button">
+            <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
         </a>
         <h1>Contact Us</h1>
         </header>
@@ -37,40 +37,26 @@
 
 
    <section class="contact-form">
-    <div>
+   
         <form>
-            <label>
-                Name:
-            <input name="userName" id="name" placeholder="Name...">
-        </label>
-        <div class="error" id="nameError">Name is required. Please enter your name.</div>
-    </div>
+    <label for="fullname">FullName</label>
+    <input type="text" id="fullname" name="fullname" value="">
+    <div class="error" id="nameError">Name is required. Please enter your name.</div>
 
-    <label>
-                Email:
-                <input name="email" id="email" placeholder="Email...">
-            </label>
-            <div class="error" id="emailError">Please enter a valid Email Address.</div>
 
-        </div>
+    <label for="email">Email</label>
+    <input type="text" id="email" name="lastname" value="">
+    <div class="error" id="emailError">Please enter a valid Email Address.</div>
 
-        <div>
-            <form>
-                <label>
-                    Last Name:
-                <input name="lastName" id="lastName" placeholder="Last Name...">
-            </label>
-            <div class="error" id="lastNameError">Last Name is required. Please enter your name.</div>
-        </div>
+    <label for="fullname">LastName </label>
+    <input type="text" id="lastname" name="lastname" value="">
+    <div class="error" id="lastNameError">Last Name is required. Please enter your name.</div>
+   
+    <label for="number">Number</label>
+    <input type="number" id="number" name="number" value="">
+    <div class="error" id="numberError">Number is required. Please enter your number.</div>
 
-   <div>
-        <form>
-            <label>
-                Number:
-            <input name="number" id="number" placeholder="Number...">
-        </label>
-        <div class="error" id="numberError">Number is required. Please enter your number.</div>
-    </div>
+
 
 
     <section class="submit_btn">
@@ -80,23 +66,15 @@
 
 
 
-
-<section class="nav">
-    <img src="/images/Nav_rectangle%201.png" class="nav-img" alt="Rectangle for the nav"/>
-    <a href="about.html"> 
-    <img src="/images/about.png" class="nav-about" alt="about"/>
-    </a>
-    <a href="contact.html">
-    <img src="/images/User_02.png" class="nav-contact-us" alt="contact"/> 
-    </a>
-    <a href="jackets.html"> 
-    <img src="/images/Bag%202.png" class="nav-jackets" alt="jackets"/> 
-    </a>
-    <img src="/images/Vector.png" class="nav-vector" alt="search"/> 
-</section>
-
-
 </main>
+
+<footer class="footer">
+    <p class="footerRainyDays">&copy; RainyDays<p>
+     <a href="about.html">About Us</a>
+     <a href="contact.html">Contact Us</a>
+</footer>
+
+
 <script src="/js/message.js"></script>
 <script src="/js/contact.js"></script>
 </body>
