--- a/home2.html
+++ b/home2.html
@@ -18,7 +18,7 @@
 <body>
     <main>
         <section class="bannerContainer">
-        <section class="banner">
+        <section class="banner ">
             <h1>
                 Pushing the 
                 Comfort Zone
@@ -26,13 +26,20 @@
         </section>
 
         <section class="submit_btn">
-            <a href="home.html">
-            <button class="welcome_page_button hvr-grow">Back Home</button>
+            <a href="jackets.html">
+            <button class="welcome_page_button hvr-grow">View Jackets</button>
         </a>
             </section>
 
-\  
+  <section class="Bookmark">
+    <a href="#jacketContainer">
+    <p class="learnMore ">Learn More</p>
+    <img src="/images/arrow.svg" class="arrowImg hvr-hang">
+    </a>
     </section>
+    </section>
+
+    
 
     <section class="bestSellingJackets">
         <h3>
@@ -41,7 +48,7 @@
 </section>
 
 
-<section class="jacketContainer">
+<section id="jacketContainer">
     <section class="microLightJacket">
       <a href="jacket-spesific.html">
       <img src="/images/Microlight%20jacket.png" class="microlight-jacket_img" alt="Microlight Jacket">
@@ -82,6 +89,19 @@
     </section>
   </section>
 
+  
+<section">
+  <video class="homeVideo" autoplay>
+    <source src="/videos/AdobeStock_269735184.mov" type="video/mp4">
+  </video>
+</section>
     </main>
+
+    <footer class="footer">
+            <p class="rainyDays">&copy; RainyDays<p>
+             <a href="about.html">About Us</a>
+             <a href="contact.html">Contact Us</a>
+    </footer>
+
 </body>
 </html>
