--- a/jackets.html
+++ b/jackets.html
@@ -65,9 +65,15 @@
 
       </section>
     </section>
-    
-
-    
     </main>
+
+
+    <footer class="footer">
+      <p class="footerRainyDays">&copy; RainyDays<p>
+       <a href="about.html">About Us</a>
+       <a href="contact.html">Contact Us</a>
+</footer>
+
+
   </body>
 </html>
