--- a/checkout2page.html
+++ b/checkout2page.html
@@ -105,5 +105,15 @@
         
          
     </main>
+
+
+    <footer class="footer">
+      <p class="footerRainyDays">&copy; RainyDays<p>
+       <a href="about.html">About Us</a>
+       <a href="contact.html">Contact Us</a>
+</footer>
+
+
+  </body>
   </body>
 </html>
