--- a/checkoutsucc2.html
+++ b/checkoutsucc2.html
@@ -52,5 +52,12 @@
 
     </section>
     </main>
+
+    <footer class="footer">
+      <p class="footerRainyDays">&copy; RainyDays<p>
+       <a href="about.html">About Us</a>
+       <a href="contact.html">Contact Us</a>
+</footer>
+
   </body>
 </html>
