--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 
 
     <section class="submit_btn">
-        <button onclick="click()" class="welcome_page_button">Submit</button>
+        <button onclick="myFunction()" class="welcome_page_button">Submit</button>
         </section>
     </section>
 
@@ -75,7 +75,6 @@
 </footer>
 
 
-<script src="/js/message.js"></script>
 <script src="/js/contact.js"></script>
 </body>
 </html>
