--- a/jacket-spesific.html
+++ b/jacket-spesific.html
@@ -70,7 +70,7 @@
       <section class="spesificJacketContainer">
         <section class="spesificJacket">
           <img
-            src="/images/Microlight%20jacket.png"
+            src="/images/Microlight jacket.png"
             class="microlightJacketSpesific"
             alt="Microlight jacket"
           />
