--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body>
 
     <header>
-        <a href="home.html">
+        <a href="home2.html">
           <section>
             <img
               src="/images/RainyDays_Logo%201.png"
@@ -40,9 +40,7 @@
     </p>
     
     <p> Our customers are everything, and the goal is to provide each and every one of them with top-class customer service.</p>
-
-
- <p> Super logistics ensures fast delivery - </p>
+ <p> Super logistics ensures fast delivery </p>
  <p> With a personal touch and shipments packed with love.</p>
      We do what we can to create an extra pleasant shopping experience. 
     Because if we make you smile, our job is done. </p>
