--- a/checkout-success.html
+++ b/checkout-success.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="order-confirmation">
-      <a href="home.html">
+      <a href="home2.html">
         <img src="/images/Back%20BTN.png" class="Back-BTN" alt="Back button" />
       </a>
       <h1>Order confirmation</h1>
