--- a/checkout2page.html
+++ b/checkout2page.html
@@ -8,7 +8,7 @@
     <title>Checkout</title>
   </head>
   <header>
-    <a href="home.html">
+    <a href="home2.html">
       <section>
         <img
           src="/images/RainyDays_Logo%201.png"
@@ -74,7 +74,7 @@
                             </form>
                             </div>
                             <section class="table"></section>
-                            <table style="width:100%">
+                            <table style="width:98%">
                                 <p class="summary">Summary</p>
                                 <tr>
                                   <th>Total before discount:</th>
