--- a/checkoutsucc2.html
+++ b/checkoutsucc2.html
@@ -9,7 +9,7 @@
     <title>Success</title>
   </head>
   <header>
-    <a href="home.html">
+    <a href="home2.html">
       <section>
         <img
           src="/images/RainyDays_Logo%201.png"
@@ -45,7 +45,7 @@
 
 
       <section class="submit_btn">
-        <a href="home.html">
+        <a href="home2.html">
         <button class="welcome_page_button hvr-grow">Back Home</button>
     </a>
         </section>
