--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <a href="home.html">
+        <a href="home2.html">
             <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
         </a>
         <h1>Contact Us</h1>
