--- a/jacket-spesific.html
+++ b/jacket-spesific.html
@@ -13,7 +13,7 @@
 
   </head>
   <header>
-    <a href="home.html">
+    <a href="home2.html">
       <section class="logoRainyDays"></section>
       <img
         src="/images/RainyDays_Logo%201.png"
