--- a/jackets.html
+++ b/jackets.html
@@ -8,7 +8,7 @@
     <title>Jackets</title>
   </head>
   <header>
-    <a href="home.html">
+    <a href="home2.html">
     <section class="logoRainyDays"></section>
     <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
     </a>
