--- a/home2.html
+++ b/home2.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <a href="home.html">
+    <a href="home2.html">
         <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
     </a>
     </header>
