--- a/about.html
+++ b/about.html
@@ -21,14 +21,16 @@
 <body>
 
     <header>
-        <a href="home2.html">
+        
           <section>
+            <a href="home2.html">
             <img
               src="/images/RainyDays_Logo%201.png"
               class="logo"
               alt="Header logo"
             />
         </a>
+        <h1>About Us</h1>
 </header>
 
 <main>
@@ -51,7 +53,7 @@
 
 
 <article class="about-rainy_days">
-    <img src="/images/About_img.png" class="about_img" alt="about image">
+    <img src="/images/About_img.png" class="about_img" alt=" a image that is presented at the bottom of the about us page">
 </article>
 
 
