--- a/checkoutsucc2.html
+++ b/checkoutsucc2.html
@@ -9,8 +9,9 @@
     <title>Success</title>
   </head>
   <header>
-    <a href="home2.html">
+   
       <section>
+        <a href="home2.html">
         <img
           src="/images/RainyDays_Logo%201.png"
           class="logo"
@@ -25,12 +26,12 @@
 
     <main>
         <section class="thankYou">
-        <p class="thank-you">Thank you!</p>
-        <p class="order-placed">Your order has been placed!</p>
-        <p class="email-sent">
+        <h2 class="thank-you">Thank you!</h2>
+        <h3 class="order-placed">Your order has been placed!</h3>
+        <h3 class="email-sent">
           We sent you an email with your order confirmation
           and bill!
-        </p>    
+        </h3>    
     </section>
     
     </section>
@@ -39,14 +40,14 @@
         <img
           src="/images/Order-confirmation_img.png"
           class="Order-confirmation_img hvr-pop"
-          alt="order-confirmation image"
+          alt=" this is a confirmation image after your order is succesful"
         />
       </section>
 
 
       <section class="submit_btn">
-        <a href="home2.html">
-        <button class="welcome_page_button hvr-grow">Back Home</button>
+        <a href="jackets.html">
+        <button class="welcome_page_button hvr-grow">Take a look at more Jackets!</button>
     </a>
         </section>
 
