--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <input type="text" id="email" name="lastname" value="">
     <div class="error" id="emailError">Please enter a valid Email Address.</div>
 
-    <label for="fullname">LastName </label>
+    <label for="lastname">LastName </label>
     <input type="text" id="lastname" name="lastname" value="">
     <div class="error" id="lastNameError">Last Name is required. Please enter your name.</div>
    
