--- a/jackets.html
+++ b/jackets.html
@@ -28,7 +28,7 @@
       <section class="jacketCotainer ">
       <section class="microLightJacket">
         <a href="jacket-spesific.html">
-        <img src="/images/Microlight%20jacket.png" class="microlight-jacket_img" alt="Microlight Jacket">
+        <img src="/images/Microlight%20jacket.png" class="microlight-jacket_img" alt=" a Microlight Jacket">
     </a>
         <p class="jacket-name">Microlight Jacket</p>
         <p class="jacket-color">Fire red</p>
@@ -36,27 +36,21 @@
       </section>
 
       <section class="expeditionJacket">
-        <a href="jacket-spesific.html">
-        <img src="/images/Expedition%20Down%20Light%20Parka.png" class="expedions-jacket_img" alt="expedions-Jacket">
-      </a>
+        <img src="/images/Expedition%20Down%20Light%20Parka.png" class="expedions-jacket_img" alt=" This is a expedions-Jacket">
         <p class="jacket-name_2"> Expedtion Down Jacket </p>
         <p class="jacket-color_2"> Orange / Silver </p>
         <p class="jacket-price_2"> kr 1 300 </p>
       </section>
 
       <section class="senjaJacket">
-        <a href="jacket-spesific.html">
-        <img src="/images/Senja%20Midlayer%20Hood%20Jacket.png" class="senja-jacket_img" alt="senja-Jacket">
-      </a> 
+        <img src="/images/Senja%20Midlayer%20Hood%20Jacket.png" class="senja-jacket_img" alt="a nice senja-Jacket">
         <p class="jacket-name_3"> Senja Midlayer Jacket </p>
         <p class="jacket-color_3"> Gray / Black </p>
         <p class="jacket-price_3"> kr 1 300 </p>
       </section>
 
-      <section class="ulrikenJacket">
-        <a href="jacket-spesific.html">
-        <img src="/images/Ulriken%20Jumper.png" class="ulriken-jacket" alt="ulriken-Jacket">
-</a>
+      <section class="ulrikenJacket"> 
+        <img src="/images/Ulriken%20Jumper.png" class="ulriken-jacket" alt="splendid ulriken-Jacket">
         <p class="jacket-name_4"> Ulriken Jumper </p>
             <p class="jacket-color_4"> Green Mud Melange </p>
             <p class="jacket-price_4"> kr 1 400 </p>
