--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 including questions about your order. </p>
             <p>You will find your order in the e-mail you received them with top-class customer service.</p> 
               </p>
-            <img src="/images/contact-image.png" class="contact-img" alt="contact image">
+            <img src="/images/contact-image.png" class="contact-img" alt="this is a image on the contact us page">
     </article>
 
 
