--- a/about.html
+++ b/about.html
@@ -7,16 +7,17 @@
     <title>About</title>
     <link href="styles6.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for my site -->
-<script>
+   <!-- Hotjar Tracking Code for my site -->
+   <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3390691,hjsv:6};
+        h._hjSettings={hjid:3415341,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+  </script>
 </head>
 <body>
 
