--- a/checkout-success.html
+++ b/checkout-success.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles5.css" rel="stylesheet" />
     <title>Checkout Success</title>
-    <!-- Hotjar Tracking Code for my site -->
-       <!-- Hotjar Tracking Code for my site -->
+   <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
