--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <link href="styles7.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for my site -->
    <!-- Hotjar Tracking Code for my site -->
-   <script>
+   <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
+<script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
         h._hjSettings={hjid:3415341,hjsv:6};
@@ -17,7 +18,7 @@
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
+</script>
 </head>
 <body>
     <header>
