--- a/home2.html
+++ b/home2.html
@@ -7,7 +7,7 @@
     <link href="styletest6.css" rel="stylesheet" />
     <link href="hover.css" rel="stylesheet" />
     <title>Home</title>
-    <!-- Hotjar Tracking Code for my site -->
+  <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
