--- a/jacket-spesific.html
+++ b/jacket-spesific.html
@@ -9,7 +9,7 @@
     <link href="ShoppingCart.css" rel="stylesheet" />
     <link href="hover.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/092032e4da.js" crossorigin="anonymous"></script>  <link href="test.css" rel="stylesheet" />
-<!-- Hotjar Tracking Code for my site -->
+<!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
