--- a/jackets.html
+++ b/jackets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="stylestest2.css" rel="stylesheet" />
     <title>Jackets</title>
-    <!-- Hotjar Tracking Code for my site -->
+    <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
