--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link href="styles6.css" rel="stylesheet">
+    <link href="/css/about.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
     (function(h,o,t,j,a,r){
@@ -18,22 +18,22 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 </head>
-<body>
 
-    <header>
-        
-          <section>
-            <a href="home2.html">
-            <img
-              src="/images/RainyDays_Logo%201.png"
-              class="logo"
-              alt="Header logo"
-            />
-        </a>
-        <h1>About Us</h1>
+<header>
+    <section>
+      <a href="home.html">
+      <img
+        src="/images/RainyDays_Logo%201.png"
+        class="logo"
+        alt="Header logo"
+      />
+  </a>
+  <h1>About Us</h1>
 </header>
 
+<body>
 <main>
+
 <article class="about">
     <p>RainyDays is an online store with an impressive selection of jackets, for being outdoors. </p> 
     </p>
