--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link href="styles7.css" rel="stylesheet">
+    <link href="/css/contact.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for my site -->
    <!-- Hotjar Tracking Code for my site -->
    <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <a href="home2.html">
+        <a href="home.html">
             <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
         </a>
         <h1>Contact Us</h1>
@@ -40,7 +40,7 @@
 
    <section class="contact-form">
    
-        <form>
+<form>
     <label for="fullname">FullName</label>
     <input type="text" id="fullname" name="fullname" value="">
     <div class="error" id="nameError">Name is required. Please enter your name.</div>
@@ -58,15 +58,10 @@
     <input type="number" id="number" name="number" value="">
     <div class="error" id="numberError">Number is required. Please enter your number.</div>
 
-
-
-
     <section class="submit_btn">
         <button onclick="myFunction()" class="welcome_page_button">Submit</button>
         </section>
     </section>
-
-
 
 </main>
 
