--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styletest6.css" rel="stylesheet" />
-    <link href="hover.css" rel="stylesheet" />
+    <link href="/css/home.css" rel="stylesheet" />
+    <link href="/css/hover.css" rel="stylesheet" />
     <title>Home</title>
   <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
@@ -21,10 +21,12 @@
 </head>
 
 <header>
-    <a href="home2.html">
+    <a href="home.html">
         <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
     </a>
     </header>
+
+    
 
 <body>
     <main>
@@ -97,10 +99,12 @@
   </section>
 
   
-<section">
+<section>
+
   <video class="homeVideo" autoplay alt="Home page video">
     <source src="/videos/AdobeStock_269735184.mov" type="video/mp4">
   </video>
+  
 </section>
     </main>
 
