--- a/jacket-spesific.html
+++ b/jacket-spesific.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacket Spesific</title>
-    <link href="stylestest3.css" rel="stylesheet" />
-    <link href="ShoppingCart.css" rel="stylesheet" />
-    <link href="hover.css" rel="stylesheet" />
+    <link href="/css/jacket-spesific.css" rel="stylesheet" />
+    <link href="/css/hover.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/092032e4da.js" crossorigin="anonymous"></script>  <link href="test.css" rel="stylesheet" />
 <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
@@ -23,7 +22,7 @@
 
   </head>
   <header>
-    <a href="home2.html">
+    <a href="home.html">
       <section class="logoRainyDays"></section>
       <img
         src="/images/RainyDays_Logo%201.png"
@@ -50,7 +49,7 @@
           <h1 class="jacket-name">Microlight Jacket</h1>
           <h1 class="jacket-color">Fire red</h1>
           <h1 class="jacket-price">kr 1 050</h1>
-          <a href="/checkoutsucc2.html">
+          <a href="/checkout.html">
           <button class="addToCart hvr-grow">Checkout</button>
         </a>
         </section>
