--- a/jackets.html
+++ b/jackets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="stylestest2.css" rel="stylesheet" />
+    <link href="/css/jackets.css" rel="stylesheet" />
     <title>Jackets</title>
     <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
 <script>
@@ -19,14 +19,16 @@
 </script>
   </head>
   <header>
-    <a href="home2.html">
+    <a href="home.html">
     <section class="logoRainyDays"></section>
     <img src="/images/RainyDays_Logo%201.png" class="logo" alt="Header logo"/>
     </a>
     <h1>Jackets</h1>
   </header>
+
   <body>
     <main>
+
       <article>
         <p class="jacketInfo ">
           As we all know different seasons require different clothing. At
