--- a/jacket-spesific.html
+++ b/jacket-spesific.html
@@ -7,18 +7,8 @@
     <title>Jacket Spesific</title>
     <link href="/css/jacket-spesific.css" rel="stylesheet" />
     <link href="/css/hover.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/092032e4da.js" crossorigin="anonymous"></script>  <link href="test.css" rel="stylesheet" />
-<!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3415341,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+  
+
 
   </head>
   <header>
@@ -46,9 +36,9 @@
         </section>
 
         <section class="jacketDetails">
-          <h1 class="jacket-name">Microlight Jacket</h1>
-          <h1 class="jacket-color">Fire red</h1>
-          <h1 class="jacket-price">kr 1 050</h1>
+          <h1 class="jacket-name"></h1>
+          <h1 class="jacket-color"></h1>
+          <h1 class="jacket-price"></h1>
           <a href="/checkout.html">
           <button class="addToCart hvr-grow">Checkout</button>
         </a>
@@ -56,10 +46,10 @@
 <label>
         <select class="dropdown_menu">
           <option selected disabled hidden> Choose size:</option>
-          <option>S</option>
-          <option>M</option>
-          <option>L</option>
-          <option>XL</option>
+          <option></option>
+          <option></option>
+          <option></option>
+          <option></option>
         </select>
    </label> 
 
@@ -85,6 +75,8 @@
       </section>
  
     </main>
+        
+    <script src="/js/productDetail.js"></script>
     
     <footer class="footer">
       <p class="footerRainyDays">&copy; RainyDays<p>
