--- a/checkout.html
+++ b/checkout.html
@@ -7,16 +7,6 @@
     <link href="/css/checkout.css" rel="stylesheet" />
     <title>Checkout</title>
     <!-- Hotjar Tracking Code for https://chimerical-frangollo-8cbef9.netlify.app/home2.html#jacketContainer -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3415341,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
   </head>
   <header>
       <section>
@@ -33,11 +23,7 @@
   <body>
     <main>
         <section class="my-order">
-            <img
-              src="/images/Microlight%20jacket.png"
-              class="orderJacket"
-              alt="my order"
-            />
+          
 
             <div class="myOrderDetails">
                 <h2 class="my-order_jacket">Microlight Jacket</h3>
@@ -69,7 +55,8 @@
   </form>
 </form>
   </div>
-
+  <div class="details">
+    </div>
   <section class="table"></section>
       <table style="width:98%">
         <h4 class="summary">Summary</h4>
@@ -89,21 +76,23 @@
              </tr>
                </table>
 
+
   <section class="submit_btn">
     <a href="checkout-success.html">
       <button class="welcome_page_button hvr-grow">Checkout</button>
          </a>
           </section>
-
     </main>
+
+
+    <script src="/js/Checkout.js"></script>
+
     <footer class="footer">
       <p class="footerRainyDays">&copy; RainyDays<p>
        <a href="about.html">About Us</a>
        <a href="contact.html">Contact Us</a>
 </footer>
 
-<script src="/script.js"></script>
 
-  
   </body>
 </html>
